# tMath

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README-CN.md  README.md
.github/workflows/: test.yml
benchmark/: AVX.cpp  AVX2.cpp  CMakeLists.txt  F16C.cpp  FMA3.cpp  NO_SIMD.cpp  SSE2.cpp  SSE3.cpp  SSE4_1.cpp  SVML.cpp  benchmark_all.hpp  benchmark_all.inl  benchmark_float4.hpp  benchmark_header.hpp  benchmark_types.hpp  benchmark_utils.hpp  bm_counters.hpp
benchmark/tools/: minimize_benchmark_json.cpp
examples/: CMakeLists.txt  simd_batch.cpp  simd_batch_dyn_dispatch.cpp  simd_batch_static_dispatch.cpp  simd_performance.cpp  utils.hpp
include/: common_macros.hpp
include/tMath/: color.hpp  floating_point.hpp  fwd.hpp  large_vector.hpp  math.hpp  math_constants.hpp  math_defs.hpp  matrix.hpp  matrix_row_major.hpp  number.hpp  quat.hpp  vector.hpp  vector1.hpp  vector2.hpp  vector3.hpp  vector4.hpp  vector_n.hpp
include/tMath/compile_time/: defs.hpp  floating_point.hpp  vector1.hpp
include/tMath/impl/: fwd_vector.hpp  matrix_casts.inl  matrix_column_major.hpp  matrix_functions.inl  matrix_operators.inl  matrix_row_major.hpp  vector2.hpp  vector3.hpp  vector4.hpp  vector_operators.inl
include/tMath/simd/: check_simd.hpp  float32_4.hpp  float4.hpp  math_defs_simd.hpp  matrix4x4_simd.hpp  platform.hpp  types.hpp  vector4_simd.hpp
include/tMath/simd/backend/: vector4_sse.hpp
include/tMath/tMath/: color.hpp  matrix.hpp  quat.hpp  vector.hpp
include/tMath/tMath/impl/: fwd_vector.hpp  math_defs.hpp  matrix_column_major.hpp  matrix_functions.inl  matrix_row_major.hpp  vector2.hpp  vector3.hpp  vector4.hpp
include/tSimd/: math_defs_simd.hpp  platform.hpp
include/tSimd/batch/: README.md  batch.hpp  defs.hpp
include/tSimd/impl/: defs.hpp  platform.hpp
include/tSimd/tSimd/: aligned_allocate.hpp  batch.hpp  dispatch_this_file.hpp  one_cpp.cpp
include/tSimd/tSimd/impl/: defs.hpp  dispatch.hpp  platform.hpp
include/tSimd/tSimd/impl/ops/: AVX_float.hpp  SSE2_float.hpp  dispatch.cpp  dispatch.hpp  func_attr.hpp  op_names.hpp  scalar_float.hpp  simd_instruction_select.hpp
include/tSimd/tSimd/impl/ops/ARM/NEON/: NEON_float32.hpp
include/tSimd/tSimd/impl/ops/Scalar/: Scalar_float.hpp  Scalar_float32.hpp  _Scalar_types.hpp
include/tSimd/tSimd/impl/ops/x86/AVX512_family/: AVX512_float32.hpp
include/tSimd/tSimd/impl/ops/x86/AVX_family/: AVX2_FMA3_float32.hpp  AVX2_float32.hpp  AVX_float32.hpp  _AVX_family_types.hpp
include/tSimd/tSimd/impl/ops/x86/AVX_family/float32/: AVX2_FMA3_float32.hpp  AVX2_float32.hpp  AVX_float32.hpp  _AVX_family_float32_type.hpp
include/tSimd/tSimd/impl/ops/x86/SSE_family/: SSE2_float32.hpp  SSE3_float32.hpp  SSE4_1_float32.hpp  SSE_float32.hpp  _SSE_family_types.hpp
include/tSimd/tSimd/impl/ops/x86/SSE_family/float32/: SSE3_float32.hpp  SSE4_1_float32.hpp  SSE_float32.hpp  _SSE_family_float32_type.hpp
include/tSimd/types/: float32_4.hpp  types.hpp
scripts/: benchmark-all-windows.bat  run_all_test.py  run_benchmark_and_minimize.py  test-windows-msvc.bat  test-windows.bat  windows-benchmark-all.bat  windows-test-all-compilers.bat
src/tSimd/: one_cpp.cpp
src/tSimd/impl/: dispatch.cpp
tests/: CMakeLists.txt  test.hpp  test_algorithm.cpp  test_builtin_types.cpp  test_common_vector.cpp  test_float.cpp  test_large_vector.cpp  test_matrix4x4_row_major.cpp  test_operator_override.cpp  test_quat.cpp  test_type_traits.cpp  test_vector.cpp  test_vector2.cpp  test_vector3.cpp  test_vector4.cpp
tests/compile_time/: test_vector1.cpp
tests/simd/: AVX.cpp  AVX2.cpp  F16C.cpp  FMA3.cpp  SSE2.cpp  SSE3.cpp  SSE4_1.cpp  basic.cpp  no_SVML.cpp  no_simd.cpp  test_all.hpp  test_all.inl  test_float32_4.inl  test_float4.hpp  test_float4.inl  test_simd_vector4_float32.cpp  test_types.hpp
tests/simd/batch/: basic.cpp
tests/tMath/: CMakeLists.txt  test_algorithm.cpp  test_builtin_types.cpp  test_common_vector.cpp  test_float.cpp  test_matrix4x4_row_major.cpp  test_operator_override.cpp  test_quat.cpp  test_type_traits.cpp  test_vector2.cpp  test_vector3.cpp  test_vector4.cpp
tests/tMath/compile_time/: test_vector1.cpp
tests/tSimd/: CMakeLists.txt
tests/tSimd/batch/: aligned_allocate_free.cpp  basic.cpp  cpuid_support.cpp  test_float32.inl
tests/tSimd/batch/Scalar/: Scalar_float32.cpp
tests/tSimd/batch/dyn_dispatch_float/: AVX.cpp  SSE2.cpp  basic.cpp  dyn_dispatch_float.inl  not_support_instruction.cpp  scalar.cpp  test_float32.inl
tests/tSimd/batch/dyn_dispatch_float/ARM/: NEON_float32.cpp
tests/tSimd/batch/dyn_dispatch_float/Scalar/: Scalar_float32.cpp
tests/tSimd/batch/dyn_dispatch_float/x86/float32/: AVX2_FMA3_float32.cpp  AVX2_float32.cpp  AVX_float32.cpp  SSE2_float32.cpp  SSE_float32.cpp  test_float32.inl
tests/tSimd/batch/x86/: aligned_allocate_free.cpp  basic.cpp  cpuid_support.cpp  not_support_instruction.cpp
tests/tSimd/batch/x86/float32/: AVX2_FMA3_float32.cpp  AVX2_float32.cpp  AVX_float32.cpp  SSE2_float32.cpp  SSE3_float32.cpp  SSE4_1_float32.cpp  SSE_float32.cpp
website/: index.html
website/benchmark_data/: dates.json
website/benchmark_data/2025-12-18/windows/: AVX.json  AVX2.json  F16C.json  FMA3.json  SSE2.json  SSE3.json  SSE4_1.json
website/benchmark_data/2025-12-20/windows/: FMA3.json  NO_SIMD.json  SSE2.json  SSE3.json  SSE4_1.json  SVML.json
website/benchmark_data/2025-12-21/windows/: FMA3.json  NO_SIMD.json  SSE2.json  SSE3.json  SSE4_1.json  SVML.json
website/benchmark_data/2025-12-23/windows/: FMA3.json  NO_SIMD.json  SSE2.json  SSE3.json  SSE4_1.json  SVML.json
website/test/: SSE2.json  dates.json
